# strategos

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf
backend/: pyproject.toml
backend/app/: __init__.py  config.py
backend/app/agents/: adjudicator.py  base_commander.py  battalion_commander.py  division_commander.py  rule_based_fallback.py  theater_commander.py
backend/app/api/: batch.py  scenario.py  simulation.py
backend/app/batch/: analysis_engine.py  batch_runner.py  outcome_collector.py  parameter_set.py  report_generator.py
backend/app/core/: domain_registry.py  protocols.py  turn_loop.py
backend/app/engine/: air_engine.py  (+8 more)
backend/scripts/: run_business_poc.py  run_cloud_poc.py
backend/tests/: test_adjudicator.py  test_agents.py  test_air_engine.py  test_air_integration.py  test_analysis_engine.py  test_api.py  test_api_phase2.py  test_batch.py  test_batch_api.py  test_business_domain.py  test_business_independent.py  test_business_poc.py  test_combat_resolver.py  test_constraint_engine.py  test_core_protocols.py  test_division_commander.py  test_game_state.py  test_graph.py  test_health.py  test_hex_grid.py  test_integration.py  test_intel_engine.py  test_llm_optimization.py  test_memory.py  test_military_adapters.py  test_models.py  test_movement_engine.py  test_narrative_dialogue.py  test_outcome_collector.py  test_phase2_integration.py  test_player_mode.py  test_report_generator.py  test_rule_based_fallback.py  test_scenario.py  test_supply_engine.py  test_turn_loop.py  test_turn_manager.py
(+64 files in other folders)
