[project]
name = "wargame"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "networkx>=3.0",
    "gunicorn>=21.0",
    "openai>=2.29.0",
]

[project.optional-dependencies]
llm = ["camel-ai[openai]>=0.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
